k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app-service
  labels:
    app: flask-app
spec:
  type: LoadBalancer  # For worldwide access
  selector:
    app: flask-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5001
